GNOME Bugzilla – Bug 710426
Should use smooth scrolling events to scroll smoothly when possible
Last modified: 2015-03-24 14:31:16 UTC
Currently, the VTE window scrolls by 4 lines on each scroll event. When using input device such as a touchpad, it gives a very rough scrolling (especially compared to other gnome applications). VTE should make use of the GDK_SMOOTH_SCROLL event and gdk_event_get_scroll_deltas() to retrieve the precise scrolling information and provide a smooth scrolling. Most probably, it is preferable to still ensure that scrolling is always done by a round number of lines (or in other words, that the top of the screen corresponds to the top of a line). How to reproduce * Use a computer with a touchpad (or an input tablet) * Open gnome-terminal * Ensure the buffer has more lines than the size of the window. Ex: for i in $(seq 100); do echo $i; done * scroll up/down with the touchpad Current behaviour: the window scrolls up/down 4 by 4 lines Expected behaviour: the window scrolls up/down smootly 1 line at a time, at the same average speed as the current behaviour.
Created attachment 257751 [details] [review] patch: implement smooth scrolling Wow, nice idea! It really gives a usability boost :) The patch I created keeps the old scrolling speed which depends on the terminal height (it's ceil(rows/10) lines per non-smooth scroll unit). This probably made sense with the old behavior, but I'm not sure if we should keep it. I'm inclined to say that the scrolling speed should be constant, not proportional to the window heigth. Any opinions?
Created attachment 257754 [details] [review] patch: implement smooth scrolling, v2 I realized that the delta reported by a smooth scroll can be greater than 1. Handle this case by sending multiple scroll events to the app.
Created attachment 257799 [details] [review] patch: implement smooth scrolling, v3 One more fix: In application mouse mode, the cumulated delta could go up to ±1 before processed, whereas in normal mode it could only go to ±1/3 or ±1/4 or so. As a consequence, after quitting application mouse mode a downwards scrolling action could result in upwards scrolling or vice versa (the old delta of maybe ±0.8 getting processed). The workaround that this patch introduces is to reset the delta whenever the mouse mode changes.
Note: There are leftovers of a smooth scolling feature in vte, set/reset by DECSET 4, stored in variable smooth_scroll. The variable is set but never used. Changelog indicates that the feature was removed in 2002. It has nothing do to with the current feature, and is safe to remove.
Review of attachment 257754 [details] [review]: obsolete
Please see bug 710619, you might consider that bug as a blocker for this one.
Not a blocker, since it works on gnome-shell according to bug 710619 comment 0. Fixed on vte-0-36.
Even after a year, I still love this feature and I'm so grateful for this idea :) I'm wondering... what if we took it a step further, and didn't insist on whole amount of cells? E.g. just like on this very webpage, with fixed fonts, you can scroll in the browser by pixels instead of character rows and it feels even smoother. I might come up with a prototype one day... No clue at this moment how easy or hard it will be.
Please file a new bug for that, this one is FIXED :-) Shouldn't be too hard to allow scrolling non-entire rows, probably just a couple places where you need to adjust (drawing, and event handling).
Okay: bug 746690.