widget: Support for smooth scrolling

https://bugzilla.gnome.org/show_bug.cgi?id=710426